[added:doc]API Documentation for Department Controller
