# controllers/DeparmentsController.go
@@ -17,6 +17,16 @@ func NewDepartmentsController(departmentsService *services.DepartmentsService) *
 	return &DepartmentsController{DepartmentsService: departmentsService}
 }
 
+// GetDepartments get all departments
+// @Summary Get all departments
+// @Description Get all departments
+// @Tags Departments
+// @Accept json
+// @Produce json
+// @Success 200 {object} []models.Departments
+// @Failure 404 {object} string
+// @Router /departments [get]
+// @Security JWT Token
 func (d *DepartmentsController) GetDepartments(c echo.Context) error {
 	departments, err := d.DepartmentsService.GetDepartments()
 	if err != nil {
@@ -25,6 +35,18 @@ func (d *DepartmentsController) GetDepartments(c echo.Context) error {
 	return c.JSON(http.StatusOK, departments)
 }
 
+// CreateDepartment create a new department
+// @Summary Create a new department
+// @Description Create a new department
+// @Tags Departments
+// @Accept json
+// @Produce json
+// @Param department body models.Departments true "Department"
+// @Success 200 {object} models.Departments
+// @Failure 400 {object} string
+// @Failure 404 {object} string
+// @Router /departments [post]
+// @Security JWT Token
 func (d *DepartmentsController) CreateDepartment(c echo.Context) error {
 	department := new(models.Departments)
 	if err := c.Bind(department); err != nil {
@@ -36,6 +58,18 @@ func (d *DepartmentsController) CreateDepartment(c echo.Context) error {
 	return c.JSON(http.StatusOK, department)
 }
 
+// GetDepartmentByID get a department by id
+// @Summary Get a department by id
+// @Description Get a department by id
+// @Tags Departments
+// @Accept json
+// @Produce json
+// @Param id path int true "Department ID"
+// @Success 200 {object} models.Departments
+// @Failure 400 {object} string
+// @Failure 404 {object} string
+// @Router /departments/{id} [get]
+// @Security JWT Token
 func (d *DepartmentsController) GetDepartmentByID(c echo.Context) error {
 	id := c.Param("id")
 	i, err := strconv.Atoi(id)
@@ -49,6 +83,19 @@ func (d *DepartmentsController) GetDepartmentByID(c echo.Context) error {
 	return c.JSON(http.StatusOK, department)
 }
 
+// UpdateDepartment update a department
+// @Summary Update a department
+// @Description Update a department
+// @Tags Departments
+// @Accept json
+// @Produce json
+// @Param id path int true "Department ID"
+// @Param department body models.Departments true "Department"
+// @Success 200 {object} models.Departments
+// @Failure 400 {object} string
+// @Failure 404 {object} string
+// @Router /departments/{id} [put]
+// @Security JWT Token
 func (d *DepartmentsController) UpdateDepartment(c echo.Context) error {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -64,6 +111,18 @@ func (d *DepartmentsController) UpdateDepartment(c echo.Context) error {
 	return c.JSON(http.StatusOK, department)
 }
 
+// DeleteDepartment delete a department
+// @Summary Delete a department
+// @Description Delete a department
+// @Tags Departments
+// @Accept json
+// @Produce json
+// @Param id path int true "Department ID"
+// @Success 200 {object} string
+// @Failure 400 {object} string
+// @Failure 404 {object} string
+// @Router /departments/{id} [delete]
+// @Security JWT Token
 func (d *DepartmentsController) DeleteDepartment(c echo.Context) error {
 	id := c.Param("id")
 	i, err := strconv.Atoi(id)
